[gd_scene load_steps=28 format=3 uid="uid://bw14uhwg0x8ca"]

[ext_resource type="Script" uid="uid://jlqujmm41run" path="res://Enemies/jellyfish.gd" id="1_06elf"]
[ext_resource type="Resource" uid="uid://b2p2sdwl8nhyr" path="res://Stats/jellyfish_stats.tres" id="2_7yq2s"]
[ext_resource type="PackedScene" uid="uid://hakdr4fdj1fo" path="res://Combat/health_component.tscn" id="3_nu0eq"]
[ext_resource type="PackedScene" uid="uid://gh2hmf87o2ox" path="res://Enemies/sword_slow_controller.tscn" id="4_65l7l"]
[ext_resource type="PackedScene" uid="uid://hfj2qrgqwdms" path="res://Enemies/wander_controller.tscn" id="4_nu0eq"]
[ext_resource type="Shader" uid="uid://cd25tciedu4h5" path="res://Combat/ShaderComplementary.gdshader" id="5_1keae"]
[ext_resource type="Texture2D" uid="uid://djvbdxu8a5uil" path="res://Enemies/Sprites/jellyfish.png" id="5_06elf"]
[ext_resource type="PackedScene" uid="uid://6c21m1l8r268" path="res://Combat/hurtbox.tscn" id="7_ku58l"]
[ext_resource type="PackedScene" uid="uid://cfur0wgencjh8" path="res://Enemies/player_detection_zone.tscn" id="8_72gqi"]
[ext_resource type="PackedScene" uid="uid://lfrhnehwb41h" path="res://Combat/hitbox.tscn" id="9_0jdvr"]
[ext_resource type="PackedScene" uid="uid://3od7ps120wrn" path="res://Enemies/soft_collision.tscn" id="9_m5dj5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4od23"]
resource_local_to_scene = true
shader = ExtResource("5_1keae")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_m5dj5"]
atlas = ExtResource("5_06elf")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yq2s"]
atlas = ExtResource("5_06elf")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu0eq"]
atlas = ExtResource("5_06elf")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_65l7l"]
atlas = ExtResource("5_06elf")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1keae"]
atlas = ExtResource("5_06elf")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw8lm"]
atlas = ExtResource("5_06elf")
region = Rect2(0, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ku58l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5dj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yq2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu0eq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65l7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1keae")
}],
"loop": false,
"name": &"Start",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw8lm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0fgnr"]
radius = 4.0
height = 10.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_loe2b"]
size = Vector2(10, 11)

[sub_resource type="CircleShape2D" id="CircleShape2D_qxvdp"]
radius = 113.018

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lh42r"]
size = Vector2(6, 8)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m5dj5"]
radius = 4.0
height = 10.0

[sub_resource type="Animation" id="Animation_eeofm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2qxec"]
resource_name = "Start"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ce8b3"]
_data = {
&"RESET": SubResource("Animation_eeofm"),
&"Start": SubResource("Animation_2qxec")
}

[node name="Jellyfish" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 16
script = ExtResource("1_06elf")
stats = ExtResource("2_7yq2s")
metadata/_edit_group_ = true

[node name="Health_Component" parent="." instance=ExtResource("3_nu0eq")]

[node name="WanderController" parent="." instance=ExtResource("4_nu0eq")]

[node name="SwordSlowController" parent="." instance=ExtResource("4_65l7l")]

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_4od23")
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_ku58l")
frame_progress = 0.818029

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0fgnr")

[node name="Hurtbox" parent="." instance=ExtResource("7_ku58l")]
visible = false
position = Vector2(0, -2)
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_loe2b")

[node name="PlayerDetectionZone" parent="." instance=ExtResource("8_72gqi")]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2(-1, -2)
shape = SubResource("CircleShape2D_qxvdp")
debug_color = Color(0, 0.6, 0.701961, 0.121569)

[node name="Hitbox" parent="." instance=ExtResource("9_0jdvr")]
visible = false
position = Vector2(0, -3)
collision_layer = 128
collision_mask = 260

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("RectangleShape2D_lh42r")

[node name="SoftCollision" parent="." instance=ExtResource("9_m5dj5")]
visible = false
position = Vector2(0, 1)

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_m5dj5")

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ce8b3")
}

[node name="BulletCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animated_sprite_animation_finished"]
[connection signal="trigger_knockback" from="Hurtbox" to="." method="_on_hurtbox_trigger_knockback"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
